# qq_bot

./: .env  .gitignore  Cargo.toml  DATABASE_SETUP.md  Dockerfile  README.md  config.toml  init.sql  kovi.conf.toml  kovi.plugin.toml
.gitea/workflows/: release.yaml
.gitea/workflows/setup-toolchain/: action.yaml
.github/workflows/: pr-check.yaml  release.yml
plugins/feedback/: Cargo.toml
plugins/feedback/src/: api.rs  config.rs  database.rs  entities.rs  lib.rs  rabbitmq.rs  utils.rs
plugins/feedback/src/commands/: framework.rs  mod.rs
plugins/feedback/src/commands/handler/: fast_reply.rs  feedback.rs  misc.rs  mod.rs
src/: main.rs
