[package]
name = "feedback"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
kovi.workspace = true
lapin = { version = "3.7.0", features = ["rustls"] }
once_cell = "1.21.3"
reqwest = { version = "0.12.24", features = ["json", "rustls-tls"] }
serde = "1.0.228"
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["mysql", "runtime-tokio", "chrono"] }
toml = "0.9.8"
tracing = "0.1.41"
